--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "app",
+  "name": "bun_elysia_example",
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^22.10.5",
+    "dotenv": "^16.4.7",
+    "elysia": "latest",
+    "mongoose": "^8.9.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "bun-types": "latest"
